renderer/css/output.css
/* ... */
.tooltip-right:after {
  transform: translateY(-50%);
  border-color: transparent var(--tooltip-color) transparent transparent;
  top: 50%;
  left: calc(var(--tooltip-tail-offset) + 0.0625rem);
  right: auto;
  bottom: auto;
}

.m-2 {
  margin: 0.5rem;
}

.my-4 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-3 {
  margin-top: 0.75rem;
}

.flex {
  display: flex;
}

.aspect-video {
  aspect-ratio: 16 / 9;
}

.size-4 {
  width: 1rem;
  height: 1rem;
}

.h-1\/4 {
  height: 25%;
}

.h-10 {
  height: 2.5rem;
}

.h-3\/5 {
  height: 60%;
}

.h-4 {
  height: 1rem;
}

.h-full {
  height: 100%;
}

.w-4 {
  width: 1rem;
}

.w-full {
  width: 100%;
}

.max-w-xs {
  max-width: 20rem;
}

.cursor-pointer {
  cursor: pointer;
}

.list-none {
  list-style-type: none;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.space-x-2 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
}

.overflow-scroll {
  overflow: scroll;
}

.rounded-md {
  border-radius: 0.375rem;
}

.border-t {
  border-top-width: 1px;
}

.bg-base-200 {
  --tw-bg-opacity: 1;
  background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
}

.bg-gray-100 {
  --tw-bg-opacity: 1;
  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
}

.bg-neutral-900 {
  --tw-bg-opacity: 1;
  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
}

.object-contain {
  -o-object-fit: contain;
     object-fit: contain;
}

.object-left {
  -o-object-position: left;
     object-position: left;
}

.p-0 {
  padding: 0px;
}

.p-2 {
  padding: 0.5rem;
}

.p-2\.5 {
  padding: 0.625rem;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.pb-3 {
  padding-bottom: 0.75rem;
}

.pr-3 {
  padding-right: 0.75rem;
}

.pt-16 {
  padding-top: 4rem;
}

.pt-4 {
  padding-top: 1rem;
}

.text-center {
  text-align: center;
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.font-bold {
  font-weight: 700;
}

.uppercase {
  text-transform: uppercase;
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.duration-300 {
  transition-duration: 300ms;
}

body {
  height: 100vh;
}

/* GRID LAYOUT */

.wrapper {
  display: grid;
  grid-template-columns: 1fr 2fr 1.5fr;
  grid-template-rows: 1fr max-content;
  gap: 0px 0px;
  grid-auto-flow: row;
  grid-template-areas:
      "sidebar verse-display preview-box"
      "sidebar controls controls";
  width: 100%;
}

.controls {
  grid-area: controls;
}

.sidebar {
  grid-area: sidebar;
}

.preview-box {
  grid-area: preview-box;
}

#verse-display {
  grid-area: verse-display;
}

/* MAIN WINDOW STYLING */

#main {
  font-family: sans-serif;
}

#verse-display {
  overflow-y: scroll;
}

/* .tooltip {
  transition: opacity 0.3s;
  opacity: 0;
  visibility: hidden;
} */

.tooltip-delay {
  transition-delay: 5s;
  /* Adjust the delay as needed */
}

.group:hover .tooltip {
  opacity: 1;
  visibility: visible;
}

/* PROJECTOR STYLING */

#projection {
  background-color: #000000;
  color: #FFFFFF;
  font-family: sans-serif;
  font-weight: bold;
}

.hover\:cursor-pointer:hover {
  cursor: pointer;
}

.hover\:bg-blue-600:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
}

.hover\:bg-gray-200:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
}

.active\:bg-gray-300:active {
  --tw-bg-opacity: 1;
  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
}

@media (prefers-color-scheme: dark) {
  .dark\:border-neutral-700 {
    --tw-border-opacity: 1;
    border-color: rgb(64 64 64 / var(--tw-border-opacity));
  }

  .dark\:bg-slate-800 {
    --tw-bg-opacity: 1;
    background-color: rgb(30 41 59 / var(--tw-bg-opacity));
  }

  .hover\:dark\:bg-slate-700:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(51 65 85 / var(--tw-bg-opacity));
  }
}

